...
    <string name="previous_theme">Previous theme</string>
    <string name="uikit_splash_title">Mobile App</string>
    <string name="color_background">Use Color Background</string>
    <string name="solid">solid</string>
    <string name="gradient">gradient</string>
    <string name="image">Image</string>
    <string name="blue_theme">Blue Theme</string>
    <string name="orange_theme">Orange Theme</string>
    <string name="aqua_theme">Aqua Theme</string>
    <string name="misc_shadow_message">Miscellaneous Buttons with Shadow</string>
    <string name="action_icons">Action Icons</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="FullName">Full Name</string>
...
        <item>@drawable/uikit_arrow_down</item>
    </array>
    <string name="title_activity_tab_bar_demo_bottom" translatable="false">TabBarDemoBottom</string>
    <string name="title_activity_tab_bar_demo_top" translatable="false">TabBarDemoTop</string>

    <string name="main_page_list_action_bar_up" translatable="false">Action Bar Up</string>
    <string name="main_page_list_action_buttons" translatable="false">Action Buttons</string>

    <!-- About Screen -->
    <string name="uikit_about_screen_apptitle">Mobile app</string>
    <string name="uikit_about_screen_actionbar_title">About</string>
    <string name="uikit_about_screen_version">Version 1.0.1</string>
    <string name="uikit_about_screen_copyright">Copyright \u00A9 2014 Philips</string>
...
