...
    <string name="for_navigation_area_text">For Navigation Area</string>
    <string name="accent_color_range_text">Accent color range</string>
    <string name="content_desc_close">close</string>
    <string name="warning_text">This color is not selectable with current theme combination. Please re-select alternatives above to use this color.</string>
    <string name="page_title_theme_settings">Theme Setting</string>
    <string name="set_theme_settings">Set</string>
    <string name="change_theme">Change Theme</string>

</resources>

