...
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight=".3"
                    android:text="@string/color_background" />

                <com.philips.cdp.uikit.customviews.PuiSwitch
                    android:id="@+id/colorSwitch"
                    android:gravity="right"
                    android:layout_weight=".7"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...
