...
                android:layout_below="@+id/outlined_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/sample_button"/>

            <Button
                android:id="@+id/outlined_transparent_white_button"
                style="@style/Button.TransparentWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/outlined_transparent_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
...
