...

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.philips.cdp.uikit.CustomButton.PhilipsActionButton
                android:id="@+id/miscBtnCircleArrow"
                style="@style/Philips.ActionButton.Circle.Arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/philips_action_button_margin"/>

...
