package com.philips.cdp.ui.catalog;

import android.content.res.Resources;
import android.test.ActivityInstrumentationTestCase2;

import com.philips.cdp.ui.catalog.activity.MainActivity;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.philips.cdp.ui.catalog.Matchers.IsBackgroundColorAsExpectedMatcher.isBackgroundColorSimilar;

/**
 * (C) Koninklijke Philips N.V., 2015.
 * All rights reserved.
 */
public class ActionBarThemeColourTest extends ActivityInstrumentationTestCase2<MainActivity> {

    private Resources testResources;

    public ActionBarThemeColourTest() {
        super(MainActivity.class);
    }

    @Override
    public void setUp() throws Exception {
        super.setUp();
        getActivity();
        testResources = getInstrumentation().getContext().getResources();
    }

    public void testDarkBlueThemeActionBarColour() {
        onView(withText("Change Theme")).perform(click());
        onView(withText("Blue Theme")).perform(click());
        pressBack();
        onView(withId(R.id.action_bar_container))
                .check(matches(isBackgroundColorSimilar("#03478")));
    }

    public void testBrightOrangeThemeActionBarColour() {
        onView(withText("Change Theme")).perform(click());
        onView(withText("Orange Theme")).perform(click());
        pressBack();
        onView(withId(R.id.action_bar_container))
                .check(matches(isBackgroundColorSimilar("#e9830")));
    }

    public void testBrightAquaThemeActionBarColour() {
        onView(withText("Change Theme")).perform(click());
        onView(withText("Aqua Theme")).perform(click());
        pressBack();
        onView(withId(R.id.action_bar_container))
                .check(matches(isBackgroundColorSimilar("#1e9d8b")));
    }
}
